Fix: Enable-previews for dockerimage også